--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,98 @@ h6 {
 }
 
 /*--------------------*/
+body {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  background: url("../images/background.png") 0 0/auto auto no-repeat;
+}
+
+p {
+  font-size: 24px;
+  font-weight: 41px;
+  color: #000c24;
+}
+
+.menu {
+  min-height: 111px;
+}
+.menu__list {
+  display: flex;
+  align-items: center;
+  padding-top: 42px;
+}
+.menu__item {
+  margin-left: 64px;
+}
+.menu__item:first-child a {
+  color: #f44336;
+}
+.menu__link {
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #928a97;
+}
+
+.about {
+  width: 100%;
+  height: 100vh;
+  background: url("../images/rotate-bcg.png");
+  background-position: auto auto;
+  background-repeat: no-repeat;
+}
+.about__photo {
+  width: 525px;
+  height: 688px;
+}
+.about__photo img {
+  width: 100%;
+  height: 100%;
+}
+
+header {
+  width: 100%;
+  width: 100vh;
+  position: relative;
+  background-image: url("../images/bcg-header.png");
+  background-repeat: no-repeat;
+  background-size: 164px 113px;
+  background-position: 32px 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.author {
+  display: flex;
+  flex-direction: column;
+  margin-top: 220px;
+  margin-left: 104px;
+}
+.author span {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 27px;
+  color: #fff;
+  display: inline-block;
+  margin-bottom: 35px;
+}
+.author__title {
+  font-family: "Rampart One", cursive;
+  font-weight: 800;
+  font-size: 38px;
+  line-height: 43px;
+  letter-spacing: 0.3em;
+  color: #fff;
+  display: inline-block;
+  margin-bottom: 16px;
+}
+.author__social-list {
+  display: flex;
+}
+.author__social-item {
+  margin-left: 18px;
+}
+.author__social-item:first-child {
+  margin-left: 0;
+}
