--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ p {
 }
 .menu__item:first-child a {
   color: #f44336;
+  font-weight: 600;
 }
 .menu__link {
   font-size: 17px;
@@ -125,16 +126,67 @@ p {
   width: 100%;
   height: 100vh;
   background: url("../images/rotate-bcg.png");
-  background-position: auto auto;
+  background-position: 0 0;
   background-repeat: no-repeat;
+  display: flex;
 }
 .about__photo {
-  width: 525px;
-  height: 688px;
+  transform: translate(200px, 364px);
+  width: 527px;
+  height: 692px;
+  background-image: url("../images/bcg-about-photo.png");
+  background-position: top left;
+  background-repeat: no-repeat;
+  position: relative;
+}
+.about__photo:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 500px solid transparent;
+  border-top: 2.5px solid transparent;
+  border-right: 20px solid #fff;
+  border-bottom: 60px solid #fff;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 .about__photo img {
-  width: 100%;
-  height: 100%;
+  width: 475px;
+  height: 653px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.about__content {
+  display: flex;
+  flex-direction: column;
+  transform: translate(254px, 516px);
+}
+.about__content-title {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 36px;
+  color: #f44336;
+  margin-bottom: 32px;
+}
+.about__content-text {
+  width: 617px;
+  font-size: 24px;
+  line-height: 170%;
+  color: #000c24;
+  margin-bottom: 48px;
+}
+.about__content-button button {
+  color: #fff;
+  min-width: 170px;
+  min-height: 53px;
+  background-color: #000c24;
+  border-radius: 4px;
+  letter-spacing: 0.0125em;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 128.7%;
 }
 
 header {
@@ -143,8 +195,8 @@ header {
   position: relative;
   background-image: url("../images/bcg-header.png");
   background-repeat: no-repeat;
-  background-size: 164px 113px;
-  background-position: 32px 10px;
+  background-size: 167px 125px;
+  background-position: 30px 5px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
