--- a/css/style.css
+++ b/css/style.css
@@ -2,81 +2,79 @@
 /*Обнуление*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 * {
-    padding: 0;
-    margin: 0;
-    border: 0;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 
 *,
 *:before,
 *:after {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :focus,
 :active {
-    outline: none;
+  outline: none;
 }
 
 a:focus,
 a:active {
-    outline: none;
+  outline: none;
 }
 
 nav,
 footer,
 header,
 aside {
-    display: block;
+  display: block;
 }
 
 html,
 body {
-    height: 100%;
-    width: 100%;
-    line-height: 1;
-    font-size: 14px;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+  height: 100%;
+  width: 100%;
+  line-height: 1;
+  font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 input,
 button,
 textarea {
-    font-family: inherit;
+  font-family: inherit;
 }
 
 input::-ms-clear {
-    display: none;
+  display: none;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 button::-moz-focus-inner {
-    padding: 0;
-    border: 0;
+  padding: 0;
+  border: 0;
 }
 
 a,
 a:visited {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 ul li {
-    list-style: none;
+  list-style: none;
 }
 
 img {
-    vertical-align: top;
+  vertical-align: top;
 }
 
 h1,
@@ -85,142 +83,127 @@ h3,
 h4,
 h5,
 h6 {
-    font-size: inherit;
-    font-weight: 400;
+  font-size: inherit;
+  font-weight: 400;
 }
 
 /*--------------------*/
 body {
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-    background: #f6f6f6ff;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  background: #f6f6f6;
 }
 
 .container {
-    max-width: 1240px;
-    margin: 0 auto;
-    padding: 0 15px;
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .container-right {
-    padding-left: calc((100% - $containerWidth) / 2 + $containerPadding);
+  padding-left: calc((100% - 1240px) / 2 + 15px);
 }
 
 a {
-    color: inherit;
+  color: inherit;
 }
 
 .btn {
-    display: inline-block;
-    padding: 13px 44px;
-    background: linear-gradient(129.54deg, #FF7B4E 15.57%, #FF584E 95.03%), #FFFFFF;
-    color: #f6f6f6ff;
-    border-radius: 100px;
-    font-size: 15px;
-    font-weight: 500;
-    cursor: pointer;
-    transition: color .3s ease-in-out;
+  display: inline-block;
+  padding: 13px 44px;
+  background: linear-gradient(129.54deg, #FF7B4E 15.57%, #FF584E 95.03%), #FFFFFF;
+  color: #f6f6f6;
+  border-radius: 100px;
+  font-size: 15px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: color 0.3s ease-in-out;
 }
-
 .btn:hover {
-    color: #ece1be;
-    transition: color .3s ease-in-out;
+  color: #ece1be;
+  transition: color 0.3s ease-in-out;
 }
-
 .btn:active {
-    position: relative;
-    top: 1px;
+  position: relative;
+  top: 1px;
 }
 
 .header {
-    position: relative;
-    padding-top: 44px;
-    width: 100%;
-    height: 940px;
-    background: linear-gradient(132.05deg, #428E5F -17.38%, #112120 78.4%), #204434;
-    color: #f6f6f6ff;
-    overflow: hidden;
+  position: relative;
+  padding-top: 44px;
+  width: 100%;
+  height: 940px;
+  background: linear-gradient(132.05deg, #428E5F -17.38%, #112120 78.4%), #204434;
+  color: #f6f6f6;
+  overflow: hidden;
 }
-
 .header:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 96px;
-    background-image: url("../images/header-bottom.svg");
-    background-repeat: no-repeat;
-    background-size: 100%;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 96px;
+  background-image: url("../images/header-bottom.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
-
 .header__inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .header__button {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
-
 .header__button-active {
-    margin-left: 25px;
+  margin-left: 25px;
 }
-
 .header__content {
-    max-width: 594px;
+  max-width: 594px;
 }
-
 .header__img {
-    position: relative;
-    flex-grow: 1;
+  position: relative;
+  flex-grow: 1;
 }
-
 .header__img img {
-    position: absolute;
-    top: -100px;
-    right: -104px;
-    width: 894px;
-    height: 940px;
-    max-width: unset;
+  position: absolute;
+  top: -100px;
+  right: -104px;
+  width: 894px;
+  height: 940px;
+  max-width: unset;
 }
 
 .menu {
-    position: relative;
-    z-index: 1;
+  position: relative;
+  z-index: 1;
 }
-
 .menu__list {
-    display: flex;
+  display: flex;
 }
-
 .menu__item {
-    margin-left: 80px;
+  margin-left: 80px;
 }
-
 .menu__item:first-child {
-    margin-left: 0;
+  margin-left: 0;
 }
-
 .menu__link {
-    font-size: 15px;
-    line-height: 22px;
-    font-weight: 500;
-    position: relative;
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 500;
+  position: relative;
 }
-
 .menu__link:hover:after, .menu__link.active:after {
-    content: "";
-    display: block;
-    position: absolute;
-    height: 4px;
-    background: #c4c4c4;
-    bottom: -9px;
-    left: 0;
-    right: 10px;
-    padding-right: 10px;
-    border-radius: 50px;
+  content: "";
+  display: block;
+  position: absolute;
+  height: 4px;
+  background: #c4c4c4;
+  bottom: -9px;
+  left: 0;
+  right: 10px;
+  padding-right: 10px;
+  border-radius: 50px;
 }
-
