--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ a {
 .btn {
   display: inline-block;
   padding: 13px 44px;
-  background: linear-gradient(129.54deg, #FF7B4E 15.57%, #FF584E 95.03%), #FFFFFF;
+  background: linear-gradient(129.54deg, #FF7B4E 15.57%, #FF584E 95.03%), #8B8B8B;
   color: #f6f6f6;
   border-radius: 100px;
   font-size: 15px;
@@ -191,7 +191,7 @@ a {
 .header__btn {
   display: inline-block;
   padding: 27px 47px;
-  background: linear-gradient(129.54deg, #FF7B4E 15.57%, #FF584E 95.03%), #FFFFFF;
+  background: linear-gradient(129.54deg, #FF7B4E 15.57%, #FF584E 95.03%), #8B8B8B;
   color: #f6f6f6;
   border-radius: 27px;
   font-size: 15px;
@@ -208,8 +208,12 @@ a {
   top: 1px;
 }
 
+main {
+  min-height: 650px;
+}
+
 .destinations {
-  padding: 96px 0 100px;
+  margin: 96px 0 100px;
   overflow-x: hidden;
 }
 .destinations__row {
@@ -230,7 +234,7 @@ a {
 .destinations__btn {
   display: inline-block;
   padding: 25px 45px;
-  background: linear-gradient(129.54deg, #FF7B4E 15.57%, #FF584E 95.03%), #FFFFFF;
+  background: linear-gradient(129.54deg, #FF7B4E 15.57%, #FF584E 95.03%), #8B8B8B;
   color: #f6f6f6;
   border-radius: 27px;
   font-size: 15px;
@@ -249,16 +253,42 @@ a {
 .destinations__slider {
   width: 1110px;
   flex-shrink: 0;
+  position: relative;
 }
 
 .slider__item {
   width: 335px;
   height: 402px;
-  -o-object-fit: cover;
-     object-fit: cover;
   border-radius: 35px;
+  margin-top: 27px;
+  transition: 0.2s ease-in;
 }
-.slider__item.active {
+.slider__btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 9;
+  display: block;
+  width: 68px;
+  height: 68px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  background: linear-gradient(129.54deg, #FF7B4E 15.57%, #FF584E 95.03%), #8B8B8B;
+}
+.slider__btn-prev {
+  left: -27px;
+  padding-left: 26px;
+  justify-content: flex-start;
+}
+.slider__btn-next {
+  right: -27px;
+  padding-right: 26px;
+  justify-content: flex-end;
+}
+
+.slider .center .slider__item {
+  margin-top: 0;
   width: 350px;
   height: 456px;
 }
@@ -267,7 +297,7 @@ a {
   position: relative;
   min-height: 940px;
   padding-top: 44px;
-  background: linear-gradient(132.05deg, #428E5F -17.38%, #112120 78.4%), #204434;
+  background: linear-gradient(132.05deg, #428e5f -17.38%, #112120 78.4%), #204434;
   color: #f6f6f6;
   overflow: hidden;
 }
