--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1,5 +1,5 @@
 body {
-	font-family: 'Poppins', sans-serif;
+	font-family: "Poppins", sans-serif;
 	font-size: 15px;
 	font-weight: 400;
 	background: $colorWhite;
@@ -28,11 +28,11 @@ a {
 	font-size: 15px;
 	font-weight: 500;
 	cursor: pointer;
-	transition: color .3s ease-in-out;
+	transition: color 0.3s ease-in-out;
 
 	&:hover {
 		color: #ece1be;
-		transition: color .3s ease-in-out;
+		transition: color 0.3s ease-in-out;
 	}
 
 	&:active {
@@ -50,5 +50,5 @@ a {
 	font-size: 25px;
 	font-weight: 700;
 	line-height: 38px;
-	opacity: .5;
+	opacity: 0.5;
 }
