--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,4 +1,5 @@
-$backgroundBtn: linear-gradient(129.54deg, #FF7B4E 15.57%, #FF584E 95.03%), #8B8B8B;
+$backgroundBtn: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%),
+	#8b8b8b;
 $backgroundHeader: linear-gradient(132.05deg, #428e5f -17.38%, #112120 78.4%),
 	#204434;
 $colorBlack: #0f1f1c;
