--- a/css/style.css
+++ b/css/style.css
@@ -295,8 +295,8 @@ main {
 
 .about__inner {
   display: flex;
-  -moz-column-gap: 53px;
-       column-gap: 53px;
+  -moz-column-gap: 68px;
+       column-gap: 68px;
 }
 .about__img {
   -o-object-fit: cover;
@@ -312,6 +312,7 @@ main {
 .about__content-title {
   font-size: 45px;
   line-height: 68px;
+  margin-bottom: 53px;
 }
 .about__content-icon {
   position: relative;
@@ -322,15 +323,23 @@ main {
   background-color: orangered;
   border-radius: 50%;
 }
+.about__content-icon img {
+  width: 100%;
+  position: absolute;
+  top: -47px;
+  left: -11px;
+}
 .about__content-text {
   font-size: 22px;
   line-height: 33px;
   opacity: 0.5;
+  margin-bottom: 30px;
 }
+
 .country {
   display: flex;
   align-items: center;
-  margin-bottom: 37px;
+  margin-bottom: 57px;
 }
 
 .place {
