--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-weight: 400;
+  color: #0f1f1c;
   background: #f6f6f6;
 }
 
@@ -320,7 +321,7 @@ main {
   left: 0;
   width: 134px;
   height: 134px;
-  background-color: orangered;
+  background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%), #8b8b8b;
   border-radius: 50%;
 }
 .about__content-icon img {
@@ -353,6 +354,65 @@ main {
   font-size: 25px;
   line-height: 38px;
   opacity: 0.5;
+}
+
+.subscribe {
+  margin-top: 121px;
+  margin-bottom: 106px;
+}
+.subscribe__inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.subscribe__title {
+  font-weight: 600;
+  max-width: 495px;
+  text-align: center;
+  margin-bottom: 60px;
+}
+.subscribe__form-email {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 800px;
+  min-height: 129px;
+  background: linear-gradient(0deg, #ffffff, #ffffff), #c4c4c4;
+  border-radius: 35px;
+  padding: 12px 15px 12px 46px;
+}
+.subscribe__form-email-input {
+  display: flex;
+}
+.subscribe__form-email-input input {
+  width: 253px;
+  padding: 5px;
+  color: rgba(15, 31, 28, 0.5);
+  font-size: 24px;
+  line-height: 36px;
+}
+.subscribe__btn {
+  font-size: 25px;
+  line-height: 38px;
+  padding: 35px 87px;
+}
+
+.footer {
+  padding-bottom: 74px;
+}
+.footer__logo a {
+  color: #ff7c4e;
+}
+.footer__list a.active:after, .footer__list a:hover:after {
+  background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%), #8b8b8b;
+}
+.footer__item a {
+  color: rgba(15, 31, 28, 0.5);
+}
+
+.footer__button-normal {
+  color: rgba(15, 31, 28, 0.5);
 }
 
 .header {
@@ -410,4 +470,48 @@ main {
   position: absolute;
   top: -105px;
   right: -121px;
+}
+
+.exploring {
+  margin-top: 252px;
+}
+.exploring__body {
+  min-height: 581px;
+  background-color: #fff;
+  border-radius: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.exploring__body:after {
+  content: url(../images/cta-el-01.svg);
+  position: absolute;
+  top: 60px;
+  right: 56px;
+}
+.exploring__body:before {
+  content: url(../images/cta-el-02.svg);
+  position: absolute;
+  bottom: 75px;
+  left: 108px;
+}
+.exploring_btn {
+  padding: 25px 55px;
+}
+.exploring__title {
+  max-width: 540px;
+  padding: 0 10px;
+  font-size: 45px;
+  line-height: 68px;
+  font-weight: 500;
+  text-align: center;
+}
+.exploring__text {
+  font-size: 30px;
+  line-height: 45px;
+  opacity: 0.5;
+  margin-top: 30px;
+  margin-bottom: 85px;
 }
