--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -2,6 +2,7 @@ body {
 	font-family: "Poppins", sans-serif;
 	font-size: 15px;
 	font-weight: 400;
+	color: $colorBlack;
 	background: $colorWhite;
 }
 
