--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,3 +72,46 @@
 		}
 	}
 }
+.exploring {
+	margin-top: 252px;
+	&__body {
+		min-height: 581px;
+		background-color: #fff;
+		border-radius: 60px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		position: relative;
+		&:after {
+			content: url(../images/cta-el-01.svg);
+			position: absolute;
+			top: 60px;
+			right: 56px;
+		}
+		&:before {
+			content: url(../images/cta-el-02.svg);
+			position: absolute;
+			bottom: 75px;
+			left: 108px;
+		}
+	}
+	&_btn {
+		padding: 25px 55px;
+	}
+	&__title {
+		max-width: 540px;
+		padding: 0 10px;
+		font-size: 45px;
+		line-height: 68px;
+		font-weight: 500;
+		text-align: center;
+	}
+	&__text {
+		font-size: 30px;
+		line-height: 45px;
+		opacity: 0.5;
+		margin-top: 30px;
+		margin-bottom: 85px;
+	}
+}
