--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -4,7 +4,7 @@
 		height: 402px;
 		border-radius: 35px;
 		margin-top: 27px;
-		transition: 0.2s ease-in; // Прыгает страница
+		transition: 0.2s ease-in;
 	}
 	&__btn {
 		position: absolute;
