--- a/css/media.css
+++ b/css/media.css
@@ -1,52 +1,249 @@
 /* === DESKTOP FIRST === */
 
 /* xl <= Extra extra large (xxl) */
-@media (max-width : 1400px) {
-
-}
+@media (max-width : 1400px) {}
 
 /* lg <= Extra large (xl) */
-@media (max-width : 1200px) {
-
-}
+@media (max-width : 1200px) {}
 
 /* md <= Large (lg) */
 @media (max-width : 992px) {
 
+	.container,
+	.container-right {
+		padding: 0 30px;
+	}
+
+	.header__content {
+		background-image: none;
+	}
 }
 
 /* sm <= Medium (md) */
 @media (max-width : 768px) {
+	.header__img {
+		opacity: .3;
 
+		background-image: url("../images/el-1.svg"),
+			url("../images/el-4.svg");
+		background-repeat: no-repeat;
+		background-position: right 100px, bottom right;
+	}
+
+	.menu__list {
+		column-gap: 35px;
+	}
+
+	.about__inner {
+		flex-direction: column;
+		align-items: flex-start;
+		row-gap: 30px;
+		column-gap: 30px;
+	}
+
+	.destinations__row {
+		flex-direction: column;
+	}
+
+	.destinations__content {
+		display: flex;
+		flex-direction: column;
+		align-items: baseline;
+	}
+
+	.exploring__body:after {
+		top: 25px;
+		right: 22px;
+	}
+
+	.exploring__body:before {
+		bottom: 25px;
+		left: 22px;
+	}
+
+	.subscribe__form-email {
+		width: 700px;
+	}
+
+	.owl-carousel .owl-stage {
+		padding: 15px 0;
+		margin: 54px 0;
+	}
 }
 
 /* xs <= Small (sm) */
 @media (max-width : 576px) {
+	body {
+		overflow-x: hidden;
+	}
 
+	.header__burger {
+		order: 4;
+		display: block;
+		position: relative;
+		width: 30px;
+		height: 20px;
+		z-index: 3;
+	}
+
+	.header__burger::before,
+	.header__burger::after {
+		content: '';
+		background-color: #fff;
+		position: absolute;
+		width: 100%;
+		height: 2px;
+		left: 0;
+		transition: all 0.3s ease 0s;
+	}
+
+	.header__burger::before {
+		top: 0;
+	}
+
+	.header__burger::after {
+		bottom: 0;
+	}
+
+	.header__burger span {
+		position: absolute;
+		background-color: #fff;
+		left: 0;
+		width: 100%;
+		height: 2px;
+		top: 9px;
+		transition: all 0.3s ease 0s;
+	}
+
+	.header__burger.active span {
+		transform: scale(0);
+	}
+
+	.header__burger.active::before {
+		transform: rotate(45deg);
+		top: 9px;
+	}
+
+	.header__burger.active::after {
+		transform: rotate(-45deg);
+		bottom: 9px;
+	}
+
+	.header__menu {
+		position: absolute;
+		/* top: -100%; */
+		display: none;
+		/*значение -100% определяет где будет находится меню без добавленного класса active*/
+		overflow: auto;
+		width: 100%;
+		height: 100%;
+		/* backdrop-filter: blur(10px); */
+		border: none;
+		/* background-color: rgba(255, 255, 255, 0.9); */
+		/* background-color: #18b5a4; */
+		padding: 70px 10px 20px 10px;
+		transition: all 0.3s ease 0s;
+	}
+
+	.header__menu.active {
+		display: block;
+		top: -10px;
+		left: 100px;
+		transition: all 0.3s ease 0s;
+	}
+
+	.header__list {
+		display: block;
+	}
+
+	.header__list li {
+		margin: 0px 0px 20px 0px;
+	}
+
+	.header__link {
+		color: black;
+		font-size: 24px;
+	}
+
+	.header__content {
+		min-width: 576px;
+	}
+
+	.slider__item {
+		object-fit: fill;
+	}
+
+	.slider__btn-next {
+		left: 470px;
+	}
+
+	.slider__btn-prev {
+		left: -15px;
+	}
+
+	.owl-carousel .owl-item img {
+		max-width: 323px;
+		margin-left: 100px;
+	}
+
+	.exploring {
+		margin-top: 125px;
+	}
+	.exploring__body:after {
+		display: none;
+  }
+  .exploring__text {
+	padding: 0 10px;
+	text-align: center;
+}
+	.subscribe__title {
+		font-weight: 500;
+	}
+
+	.subscribe__form-email {
+		display: flex;
+		flex-direction: column;
+		width: 500px;
+	}
+
+	.subscribe__btn {
+		font-size: 15px;
+		padding: 13px 44px;
+	}
+
+	.subscribe__form-email-input input {
+		border-bottom: 1px solid #ff7b4e;
+		margin-bottom: 10px;
+	}
+
+	.footer .header__menu {
+		display: block;
+		padding: 0;
+		top: 3px;
+		left: 100px;
+
+	}
+
+	.footer__button-normal,
+	.footer__button-active {
+		display: none;
+	}
 }
 
 
 /* === MOBILE FIRST === */
 
 /* Custom (xs) */
-@media (min-width : 0) {
-
-}
+@media (min-width : 0) {}
 
 /* Small (sm) */
-@media (min-width : 576px) {
-
-}
+@media (min-width : 576px) {}
 
 /* Medium (md) */
-@media (min-width : 768px) {
-
-}
+@media (min-width : 768px) {}
 
 /* Large (lg) */
-@media (min-width : 992px) {
-
-}
+@media (min-width : 992px) {}
 
 /* Extra large (xl) */
 @media (min-width : 1200px) {
