--- a/css/media.css
+++ b/css/media.css
@@ -131,16 +131,11 @@
 
 	.header__menu {
 		position: absolute;
-		/* top: -100%; */
 		display: none;
-		/*значение -100% определяет где будет находится меню без добавленного класса active*/
 		overflow: auto;
 		width: 100%;
 		height: 100%;
-		/* backdrop-filter: blur(10px); */
 		border: none;
-		/* background-color: rgba(255, 255, 255, 0.9); */
-		/* background-color: #18b5a4; */
 		padding: 70px 10px 20px 10px;
 		transition: all 0.3s ease 0s;
 	}
@@ -233,12 +228,36 @@
 	}
 }
 
-@media (max-width : 390px) {
-	.container, .container-right {
-		padding:0 5px;
+@media (max-width : 375px) {
+
+	.container,
+	.container-right {
+		width: 100%;
+		padding: 0 5px;
 	}
+
+	.header {
+		min-height: 780px;
+	}
+
+	.header__top {
+		justify-content: space-around;
+	}
+
+	.header__menu.active {
+		left: 12px;
+		top: 0;
+	}
+
 	.header__content {
 		min-width: 404px;
+		padding-left: 15px;
+		padding-right: 40px;
+	}
+
+	.header__title {
+		font-size: 34px;
+		line-height: 64px;
 	}
 
 	.header__btn {
@@ -246,11 +265,142 @@
 		bottom: 45px;
 		left: 110px;
 	}
+
+	.destinations__content {
+		padding: 0 14px;
+	}
+
+	.destinations__btn {
+		align-self: center;
+	}
+
+	.destinations__slider {
+		height: 100%;
+	}
+
+	.slider__item {
+		margin: 0;
+	}
+
+	.owl-carousel .owl-item img {
+		margin-left: 30px;
+	}
+
+	.slider__btn {
+		display: none;
+	}
+
+	.about__content {
+		width: 100%;
+		padding: 0 15px;
+	}
+
+	.about__img {
+		padding: 0 15px;
+	}
+
 	.about__img img {
 		object-fit: contain;
+		width: 100%;
+	}
+
+	.about__content-title {
+		font-size: 42px;
+		line-height: 52px;
+		margin-right: 9px;
+	}
+
+	.about__content-icon {
+		flex-shrink: 0;
+	}
+
+	.place {
+		margin-left: 25px;
+	}
+
+	.exploring {
+		margin-top: 75px;
+	}
+
+	.exploring__body {
+		border-radius: 35px;
+		-webkit-border-radius: 35px;
+		-moz-border-radius: 35px;
+		-ms-border-radius: 35px;
+		-o-border-radius: 35px;
+		justify-content: space-around;
+	}
+
+	.exploring__body::before {
+		bottom: 74px;
+		left: 7px;
+	}
+
+	.exploring__title {
+		margin-top: 30px;
+		font-size: 33px;
+		line-height: 55px;
+	}
+
+	.exploring__text {
+		font-size: 25px;
+		margin-bottom: 70px;
+	}
+
+	.exploring_btn {
+		margin-bottom: 10px;
+	}
+
+	.subscribe {
+		margin: 75px 0;
+	}
+
+	.subscribe__title {
+		font-size: 35px;
+	}
+
+	.subscribe__form-email {
+		width: 100%;
+	}
+
+	.subscribe__form-email-input input {
+		padding: 0px;
+		font-size: 16px;
+		line-height: 22px;
+		margin-top: 10px;
+	}
+
+	.subscribe__btn {
+		padding: 10px 40px;
+		line-height: 30px;
+	}
+
+	.footer {
+		padding-bottom: 20px;
+		padding-left: 20px;
+	}
+
+	.footer__top {
+		display: flex;
+		justify-content: space-evenly;
+	}
+
+	.footer .header__menu {
+		display: none;
+	}
+
+	.footer__go-back {
+		border-radius: 50%;
+		-webkit-border-radius: 50%;
+		-moz-border-radius: 50%;
+		-ms-border-radius: 50%;
+		-o-border-radius: 50%;
+	}
+
+	.footer__svg {
+		fill: #ff7b4e;
 	}
 }
-
 
 /* === MOBILE FIRST === */
 
