--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,12 @@
 @import "./about";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
+object {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+}
+
 .header {
 	position: relative;
 	min-height: 940px;
@@ -22,8 +28,9 @@
 		left: 0;
 		bottom: 0;
 		width: 100%;
-		height: 96px;
-		background-image: url("../images/header-bottom.svg");
+		min-height: 96px;
+		// background-image: url("../images/header-bottom.svg");
+		// background-size: 100%;
 	}
 	&__burger {
 		display: none;
@@ -116,4 +123,8 @@
 		margin-top: 30px;
 		margin-bottom: 85px;
 	}
+}
+
+.footer__go-back {
+	display: none;
 }
