--- a/css/media.css
+++ b/css/media.css
@@ -229,6 +229,16 @@
 }
 
 @media (max-width : 375px) {
+	.elem {
+		overflow: auto;
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+	}
+
+	.elem::-webkit-scrollbar {
+		width: 0;
+		height: 0;
+	}
 
 	.container,
 	.container-right {
@@ -283,7 +293,7 @@
 	}
 
 	.owl-carousel .owl-item img {
-		margin-left: 30px;
+		margin-left: 17px;
 	}
 
 	.slider__btn {
