--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,16 +22,6 @@ object {
 	color: $colorWhite;
 	overflow: hidden;
 
-	// &:after {
-	// 	content: "";
-	// 	position: absolute;
-	// 	left: 0;
-	// 	bottom: 0;
-	// 	width: 100%;
-	// 	min-height: 96px;
-	// 	// background-image: url("../images/header-bottom.svg");
-	// 	// background-size: 100%;
-	// }
 	&__burger {
 		display: none;
 	}
@@ -54,6 +44,7 @@ object {
 	}
 
 	&__button {
+		margin-left: 238px;
 		display: flex;
 		column-gap: 25px;
 		align-items: center;
